--- a/index.html
+++ b/index.html
@@ -2,13 +2,17 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="format-detection" content="telephone=no">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0">
+    <title>vue_chuchujie</title>
     <!--解决网页F12出现favicon.ico not found问题-->
     <link rel="shortcut icon" href="./src/assets/img/favicon.ico" />
     <link rel="bookmark" href="./src/assets/img/favicon.ico" type="image/x-icon"/>
     <!--阿里图标库icon-->
     <link rel="stylesheet" href="//at.alicdn.com/t/font_700897_ftryptqua1d.css">
-    <title>vue_chuchujie</title>
   </head>
   <body>
     <div id="app"></div>
